welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	for (k<-1 to 6){
              ^Program:16: error: not found: value vuBiscuit
		if (vuBiscuit==false){
                    ^Program:17: error: return outside method definition
			return false;
                        ^Program:20: error: return outside method definition
			return true ;
                        ^